reconstruct event listeners

--- a/index.html
+++ b/index.html
@@ -63,37 +63,37 @@
         </div>
 
         <div class="row-4 dark-space">
-            <div>x</div>
+            <div></div>
         </div>
         <div class="row-4"></div>
         <div class="row-4 dark-space">
-            <div>x</div>
+            <div></div>
         </div>
         <div class="row-4"></div>
         <div class="row-4 dark-space">
-            <div>x</div>
+            <div></div>
         </div>
         <div class="row-4"></div>
         <div class="row-4 dark-space">
-            <div>x</div>
+            <div></div>
         </div>
         <div class="row-4"></div>
 
         <div class="row-5"></div>
         <div class="row-5 dark-space">
-            <div>x</div>
+            <div></div>
         </div>
         <div class="row-5"></div>
         <div class="row-5 dark-space">
-            <div>x</div>
+            <div></div>
         </div>
         <div class="row-5"></div>
         <div class="row-5 dark-space">
-            <div>x</div>
+            <div></div>
         </div>
         <div class="row-5"></div>
         <div class="row-5 dark-space">
-            <div>x</div>
+            <div></div>
         </div>
         
         <div class="row-6 dark-space">
